// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullRuleHeader guidance links and the containing parenthesis are not rendered without guidance 1`] = `
<DocumentFragment>
  <div
    class="rule-detail"
  >
    <div>
      <span
        aria-hidden="true"
      >
        <mock-outcomechip
          count="1"
          outcometype="fail"
        />
      </span>
       
      <span
        class="rule-details-id"
      >
        <mock-newtablink
          aria-describedby="failed-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </mock-newtablink>
      </span>
      : 
      <span
        class="rule-details-description"
        id="failed-rule-rule id-description"
      >
        rule description
      </span>
      <mock-guidancetags
        deps="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FullRuleHeader renders, outcomeType = fail 1`] = `
<DocumentFragment>
  <div
    class="rule-detail"
  >
    <div>
      <span
        aria-hidden="true"
      >
        <mock-outcomechip
          count="1"
          outcometype="fail"
        />
      </span>
       
      <span
        class="rule-details-id"
      >
        <mock-newtablink
          aria-describedby="failed-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </mock-newtablink>
      </span>
      : 
      <span
        class="rule-details-description"
        id="failed-rule-rule id-description"
      >
        rule description
      </span>
      (
      <mock-guidancelinks
        links="[object Object],[object Object]"
      />
      )
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object],[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FullRuleHeader renders, outcomeType = inapplicable 1`] = `
<DocumentFragment>
  <div
    class="rule-detail"
  >
    <div>
       
      <span
        class="rule-details-id"
      >
        <mock-newtablink
          aria-describedby="not-applicable-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </mock-newtablink>
      </span>
      : 
      <span
        class="rule-details-description"
        id="not-applicable-rule-rule id-description"
      >
        rule description
      </span>
      (
      <mock-guidancelinks
        links="[object Object],[object Object]"
      />
      )
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object],[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FullRuleHeader renders, outcomeType = incomplete 1`] = `
<DocumentFragment>
  <div
    class="rule-detail"
  >
    <div>
       
      <span
        class="rule-details-id"
      >
        <mock-newtablink
          aria-describedby="incomplete-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </mock-newtablink>
      </span>
      : 
      <span
        class="rule-details-description"
        id="incomplete-rule-rule id-description"
      >
        rule description
      </span>
      (
      <mock-guidancelinks
        links="[object Object],[object Object]"
      />
      )
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object],[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FullRuleHeader renders, outcomeType = pass 1`] = `
<DocumentFragment>
  <div
    class="rule-detail"
  >
    <div>
       
      <span
        class="rule-details-id"
      >
        <mock-newtablink
          aria-describedby="passed-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </mock-newtablink>
      </span>
      : 
      <span
        class="rule-details-description"
        id="passed-rule-rule id-description"
      >
        rule description
      </span>
      (
      <mock-guidancelinks
        links="[object Object],[object Object]"
      />
      )
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object],[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FullRuleHeader renders, outcomeType = review 1`] = `
<DocumentFragment>
  <div
    class="rule-detail"
  >
    <div>
       
      <span
        class="rule-details-id"
      >
        <mock-newtablink
          aria-describedby="needs-review-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </mock-newtablink>
      </span>
      : 
      <span
        class="rule-details-description"
        id="needs-review-rule-rule id-description"
      >
        rule description
      </span>
      (
      <mock-guidancelinks
        links="[object Object],[object Object]"
      />
      )
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object],[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FullRuleHeader ruleId is displayed as text when there is no url provided for a link 1`] = `
<DocumentFragment>
  <div
    class="rule-detail"
  >
    <div>
      <span
        aria-hidden="true"
      >
        <mock-outcomechip
          count="1"
          outcometype="fail"
        />
      </span>
       
      <span
        class="rule-details-id"
      >
        rule id
      </span>
      : 
      <span
        class="rule-details-description"
        id="failed-rule-rule id-description"
      >
        rule description
      </span>
      (
      <mock-guidancelinks
        links="[object Object],[object Object]"
      />
      )
      <mock-guidancetags
        deps="[object Object]"
        links="[object Object],[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;
